--- a/data/style/nav.css
+++ b/data/style/nav.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 
 body {
     margin: 0;
@@ -5,18 +8,14 @@ body {
     font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
-html{
-    scroll-behavior: smooth;
-}
-
-
-
 nav {
     width: 100%;
     text-align: right;
     padding-top: 15px;
     padding-bottom: 15px;
     font-family: Inter;
+    color: black;
+    text-decoration: none;
 }
 
 .nav-btn-txt {
@@ -24,6 +23,8 @@ nav {
     border: none;
     margin-right: 3%;
     font-size: 20px;
+    color: black;
+    text-decoration: none;
 }
 
 .btn-cv {
