--- a/data/style/style-index.css
+++ b/data/style/style-index.css
@@ -85,8 +85,8 @@ nav {
 }
 
 .container-header {
-    width: 50%;
-    margin-right: 10%;
+    width: 50vw;
+    margin-right: 20vw;
     height: 50vh;
     margin-top: 20vh;
 }
