--- a/data/style/style-index.css
+++ b/data/style/style-index.css
@@ -86,7 +86,7 @@ nav {
 
 .container-header {
     width: 50vw;
-    margin-right: 20vw;
+    margin-left: 20vw;
     height: 50vh;
     margin-top: 20vh;
 }
