--- a/data/style/style-index.css
+++ b/data/style/style-index.css
@@ -152,9 +152,10 @@ nav {
     margin-left: 10px;
     padding: 0;
     font-size: 6.4vw;
-    font-weight: 700;
+    font-weight: 100;
     line-height: 1;
     color: #2D3435;
+    font-style: normal;
 }
 
 .button-container {
