--- a/data/style/nav.css
+++ b/data/style/nav.css
@@ -21,7 +21,7 @@ nav {
 .nav-btn-txt {
     background-color: transparent;
     border: none;
-    margin-right: 3%;
+    margin-right: 2%;
     font-size: 20px;
     color: black;
     text-decoration: none;
@@ -31,7 +31,7 @@ nav {
     display: inline-block;
     outline: none;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1em;
     border-radius: 500px;
     border: 1px solid transparent;
     text-align: center;
@@ -40,7 +40,7 @@ nav {
     height: 40px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-right: 3%;
+    margin-right: 2%;
     transition-property: background-color, border-color, color, box-shadow, filter;
     transition-duration: .3s;
 }
@@ -62,7 +62,7 @@ nav {
     padding: 5px;
     height: 40px;
     width: 40px;
-    margin-right: 3%;
+    margin-right: 2%;
     text-decoration: none;
 }
 
@@ -78,7 +78,7 @@ nav {
     padding: 5px;
     height: 40px;
     width: 40px;
-    margin-right: 3%;
+    margin-right: 2%;
 }
 
 
