--- a/data/style/nav.css
+++ b/data/style/nav.css
@@ -13,7 +13,7 @@ nav {
     text-align: right;
     padding-top: 15px;
     padding-bottom: 15px;
-    font-family: Inter;
+    font-family: Poppins;
     color: black;
     text-decoration: none;
 }
