--- a/data/style/nav.css
+++ b/data/style/nav.css
@@ -14,6 +14,7 @@ nav {
     padding-top: 15px;
     padding-bottom: 15px;
     font-family: Poppins;
+    font-weight: 100;
     color: black;
     text-decoration: none;
 }
