--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -36,6 +36,7 @@ html{
     height: 20vw;
 }
 
+/*header*/
 .header-column-left {
     flex: 1;
     display: flex;
@@ -102,9 +103,9 @@ html{
     line-height: 1;
     border-radius: 500px;
     transition-property: background-color, border-color, color, box-shadow, filter;
-    transition-duration: .3s;
+    transition-duration: 0.3s;
     white-space: normal;
-    font-weight: 700;
+    font-weight: 400;
     text-align: center;
     padding: 0.6vw 0.6vw 2.2vw 0.6vw;
     color: #fff;
