--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -301,8 +301,8 @@ footer {
     text-align: center;
     opacity: 0;
     transition:  0.5s ease;
-    margin-left: 94vw;
-    margin-top: 90vh;
+    margin-left: 95vw;
+    margin-top: 91.5vh;
     text-align: center;
     vertical-align: middle;
 }
@@ -315,6 +315,7 @@ footer {
     border-color: #F4B6C2;
     color: #F4B6C2;
     background-color: transparent;
+    cursor: grab;
 }
 
 .return_button.visible{
