--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -119,7 +119,7 @@ html{
 }
 
 .fdarkgrey {
-    background-color: #2D3435;
+    background-color: #ffffff;
     height: 100vw;
     width: 100%;
     padding-top: 3vw;
