--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -112,6 +112,7 @@ html{
     background-color: #F4B6C2;
     height: 2vw;
     border: transparent;
+    cursor: pointer;
 }
 
 .btn-2-acc {
@@ -167,8 +168,8 @@ html{
 /*Box pour regroupper img, h3, p et btn*/
 .box-card {
     width: 35vw;
-    height: 35vw;
-    background-color: green;
+    height: 33vw;
+    background-color: transparent;
     margin: 2vw 7vw 2vw 7vw;
 }
 
@@ -177,6 +178,7 @@ html{
     width: 35vw;
     height: 23,33vw;
     border-radius: 1vw;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 /*Titres des projets*/
@@ -207,10 +209,41 @@ html{
 }
 
 /*Container des boutons en dessous des projets*/
+.container-btn-projects-cards {
+    margin-top: 0.4vw;
+    width: 35vw;
+    display: flex;
+    justify-content: space-between;
+}
 
+/*Liens boutons*/
+
+a {
+    text-decoration: none;
+}
 
 /*Boutons en dessous des projets*/
+.projects-buttons-left {
+    width: 20vw;
+    height: 3vw;
+    border-radius: 1vw;
+    box-shadow: none;
+    border: solid 0.3vw #F4B6C2;
+    background-color: #F4B6C2;
+    color: #ffffff;
+    cursor: pointer;
+}
 
+.projects-buttons-right {
+    width: 13vw;
+    height: 3vw;
+    border-radius: 1vw;
+    box-shadow: none;
+    border: solid 0.3vw #F4B6C2;
+    background-color: #F4B6C2;
+    color: #ffffff;
+    cursor: pointer;
+}
 
 /*Footer*/
 footer {
@@ -262,7 +295,7 @@ footer {
     border-color: #F4B6C2;
     color: #F4B6C2;
     background-color: transparent;
-    cursor: grab;
+    cursor: pointer;
 }
 
 .return_button.visible{
