--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -232,6 +232,8 @@ a {
     background-color: #F4B6C2;
     color: #ffffff;
     cursor: pointer;
+    font-size: 1.5vw;
+    transition: background-color 0.3s ease;
 }
 
 .projects-buttons-right {
@@ -243,6 +245,14 @@ a {
     background-color: #F4B6C2;
     color: #ffffff;
     cursor: pointer;
+    font-size: 1.5vw;
+    transition: background-color 0.3s ease;
+}
+
+.projects-buttons-left:hover,
+.projects-buttons-right:hover {
+    background-color: transparent;
+    color: #2D3435;
 }
 
 /*Footer*/
@@ -280,9 +290,9 @@ footer {
     font-size: 3vw;
     text-align: center;
     opacity: 0;
-    transition:  0.5s ease;
-    margin-left: 95vw;
-    margin-top: 91.5vh;
+    transition: background-color 0.3s ease;
+    margin-left: 94vw;
+    margin-top: 90.5vh;
     text-align: center;
     vertical-align: middle;
 }
