--- a/data/css/style-Leria.css
+++ b/data/css/style-Leria.css
@@ -28,13 +28,13 @@ html {
 
 .le {
     margin-right: 0.6vw;
-    border-bottom: 0.6vh solid black;
+    border-bottom: 0.5vh solid black;
     font-family: 'Poppins', sans-serif;
-    font-size: 3.1vh;
+    font-size: 3.5vh;
     letter-spacing: -0.5px;
     text-align: left;
-    margin-top: 1vh;
-    height: 3.5vh;
+    margin-top: 1.5vh;
+    height: 4.8vh;
 }
 
 .create_site {
@@ -121,17 +121,17 @@ th:nth-child(3) {
     display: flex;
     padding: 0;
     margin-left: 5vw;
-    padding-top: 5vw;
+    margin-top: 5vw;
 }
 
 .box-le {
-    border-bottom: 5px solid #F4B6C2;
-    margin-top: 0.5vw;
-    height: 2.7vw;
+    border-bottom: 0.3vw solid #F4B6C2;
+    margin-top: 0.8vw;
+    height: 2.8vw;
 }
 
 .txt-le {
-    font-size: 2.5vw;
+    font-size: 2vw;
     margin: 0;
     padding: 0;
     color: #F4B6C2;
@@ -139,6 +139,29 @@ th:nth-child(3) {
 }
 
 .titre_rose {
+    font-size: 3.5vw;
+    margin: 0;
+    margin-left: 10px;
+    padding: 0;
+    color: #F4B6C2;
+    font-family: 'Poppins', sans-serif;
+}
+
+.box-le2 {
+    border-bottom: 0.3vw solid #F4B6C2;
+    margin-top: 0.8vw;
+    height: 3.6vw;
+}
+
+.txt-le2 {
+    font-size: 2.8vw;
+    margin: 0;
+    padding: 0;
+    color: #F4B6C2;
+    font-family: 'Poppins', sans-serif;
+}
+
+.titre_rose2 {
     font-size: 3.5vw;
     margin: 0;
     margin-left: 10px;
