--- a/data/css/nav.css
+++ b/data/css/nav.css
@@ -18,7 +18,7 @@ nav {
     background-color: transparent;
     border: none;
     margin-right: 2%;
-    font-size: 20px;
+    font-size: 1vw;
     color: black;
     text-decoration: none;
     cursor: pointer;
@@ -28,18 +28,17 @@ nav {
     display: inline-block;
     outline: none;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1vw;
     border-radius: 500px;
     border: 1px solid transparent;
     text-align: center;
     color: #fff;
     background-color: #2D3435;
     height: 40px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0 0.35vw 0 0.35vw;
     margin-right: 2%;
     transition-property: background-color, border-color, color, box-shadow, filter;
-    transition-duration: .3s;
+    transition-duration: 0.3s;
     cursor: pointer;
 }
 
@@ -64,6 +63,13 @@ nav {
     margin-right: 2%;
     text-decoration: none;
     cursor: pointer;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: 0.3s;
+}
+
+.btn-behance:hover {
+    background-color: lightgray;
+    cursor: pointer;
 }
 
 .btn-linkedin {
@@ -79,5 +85,12 @@ nav {
     height: 40px;
     width: 40px;
     margin-right: 2%;
+    cursor: pointer;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: 0.3s;
+}
+
+.btn-linkedin:hover {
+    background-color: lightgray;
     cursor: pointer;
 }
