--- a/data/css/nav.css
+++ b/data/css/nav.css
@@ -4,94 +4,45 @@ html{
 
 nav {
     width: 100%;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
     text-align: right;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-family: Poppins;
-    font-weight: 100;
-    color: black;
     text-decoration: none;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 .nav-btn-txt {
-    background-color: transparent;
     border: none;
-    margin-right: 2%;
     font-size: 1vw;
+    font-weight: 100;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
     color: black;
+    cursor: pointer;
     text-decoration: none;
-    cursor: pointer;
+    background-color: transparent;
+    margin-right: 2vw;
 }
 
-.btn-cv {
-    display: inline-block;
-    outline: none;
-    cursor: pointer;
-    font-size: 1vw;
-    border-radius: 500px;
-    border: 1px solid transparent;
-    text-align: center;
-    color: #fff;
-    background-color: #2D3435;
-    height: 40px;
-    padding: 0 0.35vw 0 0.35vw;
-    margin-right: 2%;
-    transition-property: background-color, border-color, color, box-shadow, filter;
-    transition-duration: 0.3s;
-    cursor: pointer;
-    font-weight: 700;
-}
-
-.btn-cv:hover {
-    background-color: lightgray;
-    color: #2D3435;
-    cursor: pointer;
-}
-
-.btn-behance {
-    display: inline-block;
-    outline: none;
-    cursor: pointer;
-    border-radius: 500px;
-    border: 1px solid transparent;
-    text-align: center;
-    color: #fff;
-    background-color: #2D3435;
-    padding: 5px;
-    height: 40px;
-    width: 40px;
-    margin-right: 2%;
-    text-decoration: none;
-    cursor: pointer;
-    transition-property: background-color, border-color, color, box-shadow, filter;
-    transition-duration: 0.3s;
-}
-
-.btn-behance:hover {
-    background-color: lightgray;
-    cursor: pointer;
-}
-
+.btn-cv,
+.btn-behance,
 .btn-linkedin {
-    display: inline-block;
-    outline: none;
-    cursor: pointer;
-    border-radius: 500px;
-    border: 1px solid transparent;
-    text-align: center;
-    color: #fff;
+    height: 2vw;
+    width: 2vw;
+    border-radius: 50vw;
+    border: none;
     background-color: #2D3435;
-    padding: 5px;
-    height: 40px;
-    width: 40px;
-    margin-right: 2%;
     cursor: pointer;
     transition-property: background-color, border-color, color, box-shadow, filter;
     transition-duration: 0.3s;
+    margin-right: 1.5vw;
+    color: white;
+    font-size: 1vw;
+    text-align: center;
 }
 
+.btn-cv:hover,
+.btn-behance:hover,
 .btn-linkedin:hover {
     background-color: lightgray;
+    color: #2D3435;
     cursor: pointer;
 }
