--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -120,12 +120,13 @@ html{
     color: #F4B6C2;
     background-color: #ffffff;
 }
+
 .btn-2-acc {
     margin-left: 1.5vw;
 }
 
 .f-project {
-    height: 128vw;
+    height: 112vw;
     width: 100%;
     padding-top: 2vw;
 }
@@ -268,14 +269,43 @@ a {
 /*Footer*/
 footer {
     text-align: center;
-    height: 10vh;
-    margin-top: 2.5vh;
+    height: 18vh;
+    background-color: #2D3435;
+}
+
+.btn-cv-footer {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-size: 1.5vw;
+    font-weight: 400;
+    line-height: 1;
+    border-radius: 500px;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: 0.3s;
+    white-space: normal;
+    font-weight: 400;
+    text-align: center;
+    padding: 0.6vw 0.6vw 2.2vw 0.6vw;
+    color: #fff;
+    background-color: #F4B6C2;
+    height: 2vw;
+    border: transparent;
+    cursor: pointer;
+    border: solid 0.2vw #F4B6C2;
+    margin-top: 2vh;
+}
+
+.btn-cv-footer:hover {
+    color: #F4B6C2;
+    background-color: #ffffff;
 }
 
 .p-footer {
     font-size: 1vw;
     margin: 0;
-    padding: 0;
+    padding: 1vh;
+    color: #ffffff;
 }
 
 .img-footer {
@@ -290,11 +320,9 @@ footer {
     position: fixed;
     width: 4vw;
     height: 4vw;
-    line-height: 3.5vw;
     border-radius: 50%;
     border: 2px solid transparent;
     background-color: #F4B6C2;
-    transition: 0.5s;
     text-align: center;
     opacity: 0;
     transition: background-color 0.5s ease, color 0.5s ease;
