--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -2,47 +2,160 @@ html{
     scroll-behavior: smooth;
 }
 
-nav {
-    width: 100%;
-    padding-top: 3vh;
-    padding-bottom: 3vh;
-    text-align: right;
-    text-decoration: none;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.nav-btn-txt {
-    border: none;
-    font-size: 1vw;
-    font-weight: 100;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    color: black;
-    cursor: pointer;
-    text-decoration: none;
-    background-color: transparent;
-    margin-right: 2vw;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-.btn-cv,
-.btn-behance,
-.btn-linkedin {
-    height: 2vw;
-    width: 2vw;
-    border-radius: 50vw;
-    border: none;
-    background-color: #2D3435;
-    cursor: pointer;
-    transition-property: background-color, border-color, color, box-shadow, filter;
-    transition-duration: 0.3s;
-    margin-right: 1.5vw;
-    color: white;
-    font-size: 1vw;
-    text-align: center;
+.container {
+  width: 100%;
+  margin: auto;
 }
 
-.btn-cv:hover,
-.btn-behance:hover,
-.btn-linkedin:hover {
-    background-color: lightgray;
-    color: #2D3435;
-    cursor: pointer;
+.navbar {
+  width: 100%;
+  box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
+	 height: 60px;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+}
+
+.navbar .menu-items {
+  display: flex;
+}
+
+.navbar .nav-container li {
+  list-style: none;
+}
+
+.navbar .nav-container a {
+  text-decoration: none;
+  color: #0e2431;
+  font-weight: 500;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+}
+
+.navbar .nav-container a:hover{
+    text-decoration: underline;
+}
+
+.nav-container {
+  display: block;
+  position: relative;
+  height: 60px;
+}
+
+.nav-container .checkbox {
+  position: absolute;
+  display: block;
+  height: 25px;
+  width: 32px;
+  top: 1rem;
+  right: 1rem;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.nav-container .hamburger-lines {
+  display: block;
+  height: 25px;
+  width: 32px;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-container .hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+
+.nav-container .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.nav-container .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar .menu-items {
+  padding-top: 12vh;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  height: 100vh;
+  width: 110%;
+  transform: translate(-150%);
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+  padding-left: 50px;
+  transition: transform 0.5s ease-in-out;
+  text-align: center;
+  backdrop-filter: blur(10px);
+}
+
+.navbar .menu-items li {
+  margin-bottom: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.logo {
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  font-size: 1.2rem;
+  color: #0e2431;
+  z-index: 2;
+}
+
+.logo img {
+  height: 58px;
+  width: 58px;
+}
+
+.nav-container input[type="checkbox"]:checked ~ .menu-items {
+  transform: translateX(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+.nav-container input[type="checkbox"]:checked ~ .checkbox{
+  background-color: transparent;
 }
