--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -117,7 +117,7 @@ body {
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
-  backdrop-filter: blur(20px);
+  background-color: #ffffff;
 }
 
 .navbar .menu-items li {
