--- a/m/css/style-index.css
+++ b/m/css/style-index.css
@@ -13,39 +13,33 @@ html{
     height: 100vh;
 }
 
-.container-header {
-    width: 50vw;
-    margin-left: 10vw;
-    height: 50vh;
-    margin-top: 30vh;
-}
-
+/*header*/
 .header {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 5vh;
 }
 
-.header-column-right {
-    flex: 1;
-    margin-left: 10px;
-    vertical-align: middle;
+.box-img-header {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
 }
 
 .img-manon-acc {
-    height: 20vw;
+    margin: auto;
+    width: 75vw;
 }
 
-/*header*/
-.header-column-left {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    margin-right: 10px;
+.int-header {
+    display: block;
+    margin: auto;
+    margin-top: 5vh;
 }
 
 .hello {
-    font-size: 2.6vw;
+    font-size: 9vw;
     padding: 0;
     margin: 0;
     margin-top: 30px;
@@ -62,28 +56,28 @@ html{
 }
 
 .vertical-p {
+    position: relative;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-    font-size: 1.5vw;
+    font-size: 4vw;
     margin: 0;
     margin-top: 1vw;
     font-weight: 700;
     color: #2D3435;
     border-left: 5px solid #2D3435;
     padding-left: 5px;
+    opacity: 0.99;
 }
 
 .horizontal-h1 {
     writing-mode: horizontal-tb;
     display: inline-block;
     padding-left: 10px;
-    margin-top: 1px;
-    margin-bottom: 1px;
     margin-left: 10px;
     padding: 0;
-    font-size: 6.4vw;
-    font-weight: 100;
-    line-height: 1;
+    font-size: 18vw;
+    font-weight: 700;
+    line-height: 0.8;
     color: #2D3435;
     font-style: normal;
 }
