--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -65,6 +65,7 @@ body {
   width: 32px;
   top: 1rem;
   right: 1rem;
+  z-index: 5;
   opacity: 0;
   cursor: pointer;
 }
@@ -76,6 +77,7 @@ body {
   position: absolute;
   top: 1rem;
   right: 1rem;
+  z-index: 3;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -104,6 +106,7 @@ body {
 }
 
 .navbar .menu-items {
+  position: absolute;
   padding-top: 12vh;
   box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
   height: 100vh;
@@ -115,7 +118,8 @@ body {
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
-  background-color: #ffffff;
+  backdrop-filter: blur(20px);
+  z-index: 2;
 }
 
 .navbar .menu-items li {
@@ -130,6 +134,7 @@ body {
   left: 15px;
   font-size: 1.2rem;
   color: #0e2431;
+  z-index: 3;
 }
 
 .logo img {
