--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -118,7 +118,7 @@ body {
   padding-left: 50px;
   transition: transform 0.5s ease-in-out;
   text-align: center;
-  backdrop-filter: blur(20px);
+  background-color: #ffffff;
   z-index: 2;
 }
 
