underline link nav

--- a/data/css/nav.css
+++ b/data/css/nav.css
@@ -22,6 +22,10 @@ nav {
     margin-right: 2vw;
 }
 
+.nav-btn-txt:hover {
+    text-decoration: underline;
+}
+
 .btn-cv,
 .btn-behance,
 .btn-linkedin {
