--- a/m/css/style-qui_suis-je.css
+++ b/m/css/style-qui_suis-je.css
@@ -10,131 +10,92 @@ body {
 }
 
 .container-header {
-    width: 90%;
-    height: 60vh;
-    margin-top: 5vh;
-    padding: 0;
-    margin-bottom: 0vh;
+    padding-left: 9vw;
+    padding-right: 9vw;
+    display: block;
+    text-align: center;
 }
-
 .header {
-    display: flex;
-    align-items: flex-start;
-    height: 60vh;
-    margin-top: 10vh;
+    width: 37vh;
+    margin-top: 4vh;
+    text-align: left;
 }
 
-.header-column-left {
+.header-title {
+    display: block;
+    height: 14vh;
     flex: 1;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    margin-right: 10px;
-}
-
-.manon-enfant {
-    height: 30vw;
-    margin-right: 5vw;
-}
-
-.header-column-right {
-    flex: 1;
-    margin-left: 10px;
-    vertical-align: middle;
-    margin-top: 5vh;
+    color: #2D3435;
+    font-family: Poppins;
 }
 
 .hello {
-    font-size: 2vw;
+    font-size: 4vh;
     padding: 0;
     margin: 0;
-    margin-top: 30px;
-    font-weight: 100;
-    color: #2D3435;
+    line-height: 4.4vh;
+    font-weight: 600;
 }
 
 .vertical-p-container {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin-top: 0.5vw;
     padding: 0;
 }
 
 .vertical-p {
+    margin-top: 1.4vh;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-    font-size: 1vw;
-    margin: 0;
-    margin-top: 0.6vw;
-    font-weight: 100;
-    color: #2D3435;
-    border-left: 5px solid #2D3435;
-    padding-left: 5px;
+    font-size: 1.9vh;
+    line-height: 2.4vh;
+    font-weight: 600;
+    border-left: 0.5vh solid #2D3435;
+    padding-left: 1.3vh;
 }
 
 .horizontal-h1 {
     writing-mode: horizontal-tb;
     display: inline-block;
-    padding-left: 10px;
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-left: 10px;
-    padding: 0;
-    font-size: 4.2vw;
-    font-weight: 100;
-    line-height: 1;
-    color: #2D3435;
+    font-size: 8.4vh;
+    font-weight: 700;
+    line-height: 8.8vh;
+    margin-left: 1.3vh;
 }
 
 .button-container {
-    margin-top: 1vw;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1vh;
 }
 
 .button-container button {
     display: inline-block;
     outline: none;
     cursor: pointer;
-    font-size: 1vw;
+    font-size: 1.6vh;
     font-weight: 400;
-    line-height: 1;
-    border-radius: 500px;
-    transition-property: background-color,border-color,color,box-shadow,filter;
-    transition-duration: .3s;
-    white-space: normal;
-    font-weight: 700;
     text-align: center;
-    padding: 0.5vw 0.5vw 1.5vw 0.5vw;
+    white-space: normal;
     color: #fff;
     background-color: #F4B6C2;
-    height: 2vw;
+    border-radius: 500px;
+    padding: 0.8vh 1vh 0.8vh 1vh;
     border: transparent;
-}
-
-.btn-2-acc {
-    margin-left: 2.5vw;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: .3s;
 }
 
 .bio {
-    margin-top: 2vw;
-    font-size: 1vw;
+    text-align: left;
+    margin-top: 3vh;
+    font-size: 1.9vh;
+    letter-spacing: -0.5px;
+    line-height: 2.6vh;
 }
 
-footer {
-    text-align: center;
-    height: 10vh;
-    margin-top: 10vh;
-}
-
-.p-footer {
-    font-size: 1vw;
-    padding: 0.8vh;
-}
-
-.img-footer {
-    height: 1vw;
-    padding: 0;
-    margin: 0;
-    margin-left: 1vw;
-    margin-right: 1vw;
+.manon-enfant {
+    width: 32vh;
+    margin-top: 3vh;
 }
